Cleaned up scramble wrapper area and code. Font size is now fixed, wraps horizontally and scrolls vertically to maintain constant height.

--- a/app/static/less/navbar.less
+++ b/app/static/less/navbar.less
@@ -1,6 +1,6 @@
 @import "common.less";
 
-@navbar-color: #0a2446;
+@navbar-color: #021e38;
 
 //------------------------------------------------------------------------
 
