--- a/app/static/less/timer_page.less
+++ b/app/static/less/timer_page.less
@@ -20,19 +20,28 @@
 
 .scramble-wrapper {
     font-family: 'Roboto', sans-serif;
+
     font-size: 24px;
+    @media @mobile {
+        font-size: 14px;
+    }
+    
+    height: ~"calc(20% - 56px)";
     width: 100%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+
+    .scram {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        height: ~"calc(100% - 20px)";
+        width: 100%;
+        overflow-y: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
 
     background-color: @scramble-bg-color;
-
-    p {
-        margin-bottom: 5px;
-    }
 }
 
 .flex-col {
